Fix alignment

--- a/components/Message.module.css
+++ b/components/Message.module.css
@@ -33,7 +33,7 @@
   white-space: pre-wrap;
   word-wrap: break-word;
   overflow-x: auto;
-  max-width: 680px;
+  max-width: 600px;
   font-family: "Consolas", monospace;
   font-size: 15px;
 }
